<resources>
    <string name="app_name">Bus Stop</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_app">Find and take the bus</string>
    <string name="title_add_bus_stop">Add new Bus Stop</string>
    <string name="title_add_bus">Add Bus </string>
    <string name="Add">Add Bus Stop</string>
    <string name="logged">Logged</string>
    <string name="logout">Log out</string>
    <string name="add_name_bus_stop">Insert name of Bus Stop:</string>
    <string name="add_position_bus_stop">Get Position</string>
    <string name="add_photo_bus_stop">Take a Photo</string>
    <string name="btn_add_bus_stop">Add</string>
    <string name="password_text">Password</string>
    <string name="login_btn_text">Sign in</string>
    <string name="email_text">Email</string>
    <string name="register_text">Registration</string>
    <string name="gamification_title">My Activity</string>
    <string name="username_text">Username</string>
    <string name="register_btn_text">Sign up</string>
    <string name="login_text">Login</string>
    <string name="bus_stop_photo_description">Bus Stop Photo</string>
    <string name="btn_info_window">Open</string>
    <string name="create_username_info_window">Created by:</string>
    <string name="fab_current_gps_description">fab_current_gps</string>
    <string name="name_of_bus">name of bus</string>
    <string name="creator_bus">Found by:</string>
    <string name="exp_gamification">XP</string>
    <string name="filter_text">Filter:</string>
    <string name="hint_name_bus_text">ex. 8A</string>
    <string name="hint_name_bus_stop">ex. Lido di Savoia</string>
    <string name="default_day_text">Select Day:</string>
    <string name="default_hour_text">Select Hour:</string>
    <string name="add_text_btn">Add</string>
    <string name="text_default_feedback">FEEDBACK</string>
    <string name="default_text_time">TIME</string>
    <string name="logo">Logo</string>
</resources>