<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/linear_logo_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher_foreground"
            android:contentDescription="@string/logo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_text"
            android:textAllCaps="true"
            android:layout_gravity="center"
            style="@style/TextAppearance.AppCompat.Title"
            />

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email_login"
        android:background="@drawable/radius"
        android:layout_marginHorizontal="45dp"
        android:layout_marginVertical="20dp"
        android:hint="@string/email_text"
        android:inputType="textEmailAddress"
        android:gravity="center"
        android:autofillHints="@string/email_text"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password_login"
        android:background="@drawable/radius"
        android:layout_marginHorizontal="45dp"
        android:layout_marginVertical="5dp"
        android:hint="@string/password_text"
        android:inputType="textPassword"
        android:gravity="center"
        android:autofillHints="@string/password_text"
        />



    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_login_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginHorizontal="45dp"
        android:text="@string/login_btn_text" />


    <TextView
        android:id="@+id/redirect_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_text"
        android:layout_margin="20dp"
        android:layout_gravity="end" />

    <TextView
        android:id="@+id/listView_my_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/assistant_semibold"
        android:gravity="center"
        android:text="@string/gamification_title"
        android:textSize="20sp"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ProgressBar
            android:id="@+id/progress_bar_gamification"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:max="100"
            android:layout_marginHorizontal="50dp"
            android:visibility="gone"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            />

        <TextView
            android:id="@+id/text_view_progress_bar_gamification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>


        <ListView
            android:id="@+id/listView_gamification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dividerHeight="1px"
            android:divider="@color/grey"
            android:layout_marginBottom="80dp"
            />




</androidx.appcompat.widget.LinearLayoutCompat>

